# aws-s3-webdav

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-alpine  README.md  build-docker-alpine.sh  build-docker.sh  cargo.sh  config.toml  release.sh  rustfmt.toml
src/: env.rs  lib.rs  main.rs  routes.rs
tests/: integration_tests.rs
